infrastructure/ingresses/MTADroneService-auth-ingresses.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mtadroneservice-auth-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/limit-connections: '5'
    nginx.ingress.kubernetes.io/auth-url: http://mtadroneservice-auth-service.default.svc.cluster.local:8888/token/validate
    nginx.ingress.kubernetes.io/limit-rps: '2'
    nginx.ingress.kubernetes.io/limit-rpm: '20'
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - mtadroneservice.com
      secretName: drmarkdown-cert-tls
  rules:
    - host: mtadroneservice.com
      http:
        paths:
          - path: /user/create
            backend:
              serviceName: mtadroneservice-auth-service
              servicePort: 8888
          - path: /user/login
            backend:
              serviceName: mtadroneservice-auth-service
              servicePort: 8888
