infrastructure/ingresses/MTADroneService-frontend-ingresses.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mtadroneservice-frontend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/limit-connections: '5'
    nginx.ingress.kubernetes.io/limit-rps: '20'
    nginx.ingress.kubernetes.io/limit-rpm: '20'
spec:
  tls:
    - hosts:
        - mtadroneservice.mooo.com
      secretName: mtadroneservice-cert-tls
  rules:
    - host: mtadroneservice.mooo.com
      http:
        paths:
          - path: /
            backend:
              serviceName: mtadroneservice-frontend-service
              servicePort: 80
